[project]
name = "ss-ana"
version = "1.0.3"
description = ""
authors = [
    {name = "Nya-WSL",email = "support@nya-wsl.com"},
    {name = "SageSoft",email = "sagesoft@nya-wsl.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "nicegui (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false